# archive-parser

./: Cargo.toml
src/: archive.rs  lib.rs  mastodon.rs  tweet.rs
src/media/: animated_gif.rs  mod.rs  photo.rs  video.rs
src/sql/: insert.rs  mod.rs  select_status.rs  update_media.rs
