[package]
name = "archive-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
clap = { version = "4.0.29", features = ["derive"] }
native-tls = "0.2.11"
postgres = { version = "0.19.4", features = ["array-impls"] }
postgres-native-tls = "0.5.0"
reqwest = { version = "0.11.13", features = ["blocking", "json", "multipart"] }
sea-query = { version = "0.28.0", features = ["derive", "backend-postgres"] }
sea-query-postgres = { version = "0.2.0", features = ["postgres-array", "with-chrono"] }
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
